--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,19 +1,11 @@
 {
-  "short_name": "aiokr blog",
-  "name": "aiokr blog",
-  "description": "知行合一",
+  "short_name": "wapiti theme",
+  "name": "wapiti theme",
+  "description": "",
   "icons": [
     {
       "src": "192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    }, {
-      "src": "144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, {
-      "src": "128.png",
-      "sizes": "128x128",
       "type": "image/png"
     }
   ],
